--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,11 +6,12 @@
 <div class="splash vcenter">
    <div class="container">
     <div class="col-md-12 text-center">
-            <h1>{{ brand }}</h1>
+            <a href="#intro" class="btn btn-circle anchor-btn"><i class="fa fa-chevron-down"></i></a>
     </div>
    </div>
 </div>
 
+<a id="intro"></a>
 <section class="mid-grey pattern-brushed box-shadow-grey">
       <div class="container container-padded text-center">
          <div class="col-sm-offset-2 col-sm-8">
